--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,12 @@
     "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
     "nodemon": "^1.17.5",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "round-to": "^3.0.0",
+    "supertest": "^3.1.0"
+  },
+  "devDependencies": {
+    "expect": "^23.0.0",
+    "mocha": "^5.2.0"
   }
 }
